Misc changes
- bump gradle to 8.3
- return back checktysle
- use BC as a library

Signed-off-by: Andrey Pleskach <ples@aiven.io>