@@ -8,7 +8,6 @@ package org.opensearch.repository.encrypted;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.opensearch.common.collect.Tuple;
-import org.opensearch.common.logging.DeprecationLogger;
 import org.opensearch.common.settings.SecureSetting;
 import org.opensearch.common.settings.Setting;
 import org.opensearch.common.settings.Settings;
@@ -19,7 +18,6 @@ import org.opensearch.repository.encrypted.security.RsaKeysReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.security.KeyPair;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -30,8 +28,6 @@ import java.util.Set;
 class EncryptedRepositorySettings {
 
     private static final Logger LOGGER = LogManager.getLogger(EncryptedRepositorySettings.class);
-
-    private static final DeprecationLogger DEPRECATION_LOGGER = DeprecationLogger.getLogger(EncryptedRepositorySettings.class);
 
     public static final String PREFIX = "encrypted.";
 
@@ -93,14 +89,12 @@ class EncryptedRepositorySettings {
                     key -> SecureSetting.secureFile(key, null)
             );
 
-    public static final List<Setting<?>> REPOSITORY_SETTINGS =
-            Collections.unmodifiableList(
-                    Arrays.asList(
-                            AZURE_PUBLIC_KEY, AZURE_PRIVATE_KEY,
-                            FS_PUBLIC_KEY, FS_PRIVATE_KEY,
-                            GCS_PUBLIC_KEY, GCS_PRIVATE_KEY,
-                            S3_PUBLIC_KEY, S3_PRIVATE_KEY)
-            );
+    public static final List<Setting<?>> REPOSITORY_SETTINGS = List.of(
+            AZURE_PUBLIC_KEY, AZURE_PRIVATE_KEY,
+            FS_PUBLIC_KEY, FS_PRIVATE_KEY,
+            GCS_PUBLIC_KEY, GCS_PRIVATE_KEY,
+            S3_PUBLIC_KEY, S3_PRIVATE_KEY
+    );
 
     private static final Map<String, Tuple<Setting.AffixSetting<InputStream>, Setting.AffixSetting<InputStream>>>
             PREFIXES = new HashMap<String, Tuple<Setting.AffixSetting<InputStream>, Setting.AffixSetting<InputStream>>>() {
@@ -158,7 +152,7 @@ class EncryptedRepositorySettings {
                                         final String prefix,
                                         final Settings settings) {
         final Setting<T> concreteSetting = setting.getConcreteSettingForNamespace(prefix);
-        if (concreteSetting.exists(settings) == false) {
+        if (!concreteSetting.exists(settings)) {
             throw new SettingsException("Setting " + concreteSetting.getKey() + " hasn't been set");
         }
         return concreteSetting.get(settings);
